# windows-key-logger

./: Cargo.toml  README.md
src/: logger.rs  main.rs
